manifests/base/resources/generic-links/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: generic-links
    chart: generic-links-1.1.17
    heritage: Helm
    release: generic-links
  name: generic-links
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generic-links
      release: generic-links
  template:
    metadata:
      labels:
        app: generic-links
        release: generic-links
    spec:
      containers:
      - env:
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: generic-links-configs
        - name: AUTH_JWKS_URI
          value: $(KEYS_URI)/v1/keys/qlik.api.internal
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: mongodbUri
              name: generic-links-secrets
        - name: MONGO_URI
          value: $(MONGODB_URI)
        - name: NATS_URI
          valueFrom:
            configMapKeyRef:
              key: natsUri
              name: generic-links-configs
        - name: MESSAGING_NATS_ADDR
          value: $(NATS_URI)
        - name: NATS_STREAMING_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: natsStreamingClusterId
              name: generic-links-configs
        - name: MESSAGING_STAN_CLUSTER_ID
          value: $(NATS_STREAMING_CLUSTER_ID)
        - name: TOKEN_AUTH_PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKey
              name: generic-links-secrets
        - name: TOKEN_PRIVATE_KEY
          value: $(TOKEN_AUTH_PRIVATE_KEY)
        - name: TOKEN_AUTH_PRIVATE_KEY_ID
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKeyId
              name: generic-links-secrets
        - name: TOKEN_KID
          value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
        - name: TOKEN_AUTH_URI
          valueFrom:
            configMapKeyRef:
              key: tokenAuthUri
              name: generic-links-configs
        - name: TOKEN_URI
          value: $(TOKEN_AUTH_URI)/v1/internal-tokens
        - name: COLLECTIONS_URI
          valueFrom:
            configMapKeyRef:
              key: collectionsUri
              name: generic-links-configs
        - name: ITEMS_URI
          value: $(COLLECTIONS_URI)
        - name: PDS_URI
          valueFrom:
            configMapKeyRef:
              key: pdsUri
              name: generic-links-configs
        - name: PDS_URL
          value: $(PDS_URI)
        - name: TERMINATION_GRACE_PERIOD
          value: "30"
        - name: LOG_LEVEL
          value: info
        - name: AUTH_ENABLED
          value: "true"
        - name: AUTH_JWT_AUD
          value: qlik.api.internal
        - name: AUTH_JWT_ISS
          value: qlik.api.internal
        - name: MESSAGING_ENABLED
          value: "true"
        - name: MESSAGING_AUTH_ENABLED
          value: "true"
        - name: WEB_RISK_ENABLED
          value: "false"
        - name: ITEMS_ENABLED
          value: "true"
        - name: ACCESS_CONTROL_ENABLED
          value: "true"
        image: qlik-docker-qsefe.bintray.io/generic-links:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 6080
        name: main
        ports:
        - containerPort: 6080
        readinessProbe:
          httpGet:
            path: /ready
            port: 6080
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      imagePullSecrets:
      - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
---
