manifests/base/resources/generic-links/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6080"
    prometheus.io/scrape: "true"
  labels:
    app: generic-links
    chart: generic-links-1.1.17
    heritage: Helm
    release: generic-links
  name: generic-links
spec:
  ports:
  - name: generic-links
    port: 6080
    protocol: TCP
    targetPort: 6080
  selector:
    app: generic-links
    release: generic-links
  type: ClusterIP
---
